Revert "feat(api): Enhance user activity log endpoint with pagination and filtering options"
This reverts commit bb7831d41af4118ce17fbf4d638db499eacd5b30.
